Fix dark mode

--- a/client/src/components/ComponentStyles.scss
+++ b/client/src/components/ComponentStyles.scss
@@ -1,3 +1,7 @@
+body {
+  font-family: 'Roboto Flex', sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
+}
 .react-kanban-column {
   padding: 15px;
   border-radius: 7px;
